fix(sf): fix misalignment
- close https://github.com/ng-alain/ng-alain/issues/2212

--- a/packages/form/src/style/index.less
+++ b/packages/form/src/style/index.less
@@ -15,6 +15,9 @@
   // 固定 label
   &__fixed {
     display: flex;
+    .@{ant-prefix}-form-item-control-wrapper {
+      flex: 1;
+    }
   }
 
   &__title {
